路由的内容

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "JerryMissTom",
   "license": "ISC",
   "dependencies": {
-    "koa": "^2.5.1"
+    "koa": "^2.5.1",
+    "koa-router": "^7.4.0"
   }
 }
