--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "JerryMissTom",
   "license": "ISC",
   "dependencies": {
+    "ip": "^1.1.5",
     "koa": "^2.5.1",
     "koa-bodyparser": "^4.2.0",
     "koa-nunjucks-2": "^3.0.2",
     "koa-router": "^7.4.0",
-    "koa-static": "^4.0.2"
+    "koa-static": "^4.0.2",
+    "log4js": "^2.6.0"
   }
 }
