--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "koa-nunjucks-2": "^3.0.2",
     "koa-router": "^7.4.0",
     "koa-static": "^4.0.2",
-    "log4js": "^2.6.0"
+    "log4js": "^2.6.0",
+    "nunjucks": "^3.1.2"
   }
 }
